--- a/week_2/8_gps1_1/gps1.1.css
+++ b/week_2/8_gps1_1/gps1.1.css
@@ -1,1 +1,15 @@
 /* include your css here */
+.container{
+      margin: 0 auto;
+      background-color:red;
+     }
+     
+.bod2 {
+        background:blue; 
+     }
+     
+.nav{
+      width:100px;
+      height:500px;
+      float:left;
+     }
